<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="auto_pilot_logo">Auto Pilot Logo</string>

    <string name="autopilot">AutoPilot</string>
    <string name="username">username</string>

    <!--Main Drawer Activity-->
    <string name="menu_home">Home</string>
    <string name="add_funds">Add Funds</string>
    <string name="withdraw_funds">Withdraw Funds</string>
    <string name="sign_out">Sign Out</string>

    <!--Log In Activity-->
    <string name="login_Edit">Username</string>
    <string name="password_Edit">Password</string>
    <string name="Sign_In_Button">Sign In</string>

    <!--Registration Activity-->
    <string name="create_email_address">Email Address</string>
    <string name="create_address">Address</string>
    <string name="create_password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="create_phone_number">Phone Number</string>
    <string name="create_username">Username</string>
    <string name="create_full_name">Full Name</string>
    <string name="complete_button">Complete</string>
    <string name="back_button_registration">Back</string>
    <string name="autopilot_logo">AutoPilot Logo</string>

    <!--Add Funds Fragment-->
    <string name="deposit_amount">Deposit Amount</string>
    <string name="submit_button">submit</string>
    <string name="add_funds_textView">ADD FUNDS</string>

    <!--Home Page Activity-->
    <string name="stock_name">Stock Name</string>
    <string name="price">Price</string>
</resources>