<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/imageView4"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginStart="28dp"
		android:layout_marginLeft="28dp"
		android:layout_marginEnd="28dp"
		android:layout_marginRight="28dp"
		android:layout_marginBottom="500dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/autopilotlogo"
		android:contentDescription="@string/autopilot_logo" />

	<TextView
		android:id="@+id/create_full_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginLeft="30dp"
		android:layout_marginTop="30dp"
		android:text="@string/create_full_name"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView4" />

	<EditText
		android:id="@+id/create_full_name_editText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="94dp"
		android:layout_marginLeft="94dp"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="14dp"
		android:layout_marginRight="14dp"
		android:ems="10"
		android:inputType="textEmailAddress"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/create_full_name"
		app:layout_constraintTop_toBottomOf="@+id/imageView4" />

	<TextView
		android:id="@+id/create_email_address"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="28dp"
		android:layout_marginLeft="28dp"
		android:layout_marginTop="38dp"
		android:text="@string/create_email_address"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/create_full_name" />

	<EditText
		android:id="@+id/create_email_address_editText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="70dp"
		android:layout_marginLeft="70dp"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="14dp"
		android:layout_marginRight="14dp"
		android:ems="10"
		android:inputType="textEmailAddress"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/create_email_address"
		app:layout_constraintTop_toBottomOf="@+id/create_full_name_editText" />

	<TextView
		android:id="@+id/create_address"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="28dp"
		android:layout_marginLeft="28dp"
		android:layout_marginTop="38dp"
		android:text="@string/create_address"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/create_email_address" />

	<EditText
		android:id="@+id/create_address_editText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="108dp"
		android:layout_marginLeft="108dp"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="14dp"
		android:layout_marginRight="14dp"
		android:ems="10"
		android:inputType="textPostalAddress"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/create_address"
		app:layout_constraintTop_toBottomOf="@+id/create_email_address_editText" />

	<TextView
		android:id="@+id/create_phone_number"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="28dp"
		android:layout_marginLeft="28dp"
		android:layout_marginTop="38dp"
		android:text="@string/create_phone_number"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/create_address" />

	<EditText
		android:id="@+id/create_phone_number_editText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="67dp"
		android:layout_marginLeft="67dp"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="14dp"
		android:layout_marginRight="14dp"
		android:ems="10"
		android:inputType="phone"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/create_phone_number"
		app:layout_constraintTop_toBottomOf="@+id/create_address_editText" />

	<TextView
		android:id="@+id/create_username"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="28dp"
		android:layout_marginLeft="28dp"
		android:layout_marginTop="38dp"
		android:text="@string/create_username"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/create_phone_number" />

	<EditText
		android:id="@+id/create_username_editText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="96dp"
		android:layout_marginLeft="96dp"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="14dp"
		android:layout_marginRight="14dp"
		android:ems="10"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/create_username"
		app:layout_constraintTop_toBottomOf="@+id/create_phone_number_editText" />

	<TextView
		android:id="@+id/create_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="28dp"
		android:layout_marginLeft="28dp"
		android:layout_marginTop="38dp"
		android:text="@string/create_password"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/create_username" />

	<EditText
		android:id="@+id/create_password_editText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="92dp"
		android:layout_marginLeft="92dp"
		android:layout_marginTop="14dp"
		android:layout_marginEnd="12dp"
		android:layout_marginRight="12dp"
		android:ems="10"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/create_password"
		app:layout_constraintTop_toBottomOf="@+id/create_username_editText" />

	<TextView
		android:id="@+id/retype_password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="28dp"
		android:layout_marginLeft="28dp"
		android:layout_marginTop="38dp"
		android:text="@string/retype_password"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/create_password" />

	<EditText
		android:id="@+id/retype_password_editText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="43dp"
		android:layout_marginLeft="43dp"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="14dp"
		android:layout_marginRight="14dp"
		android:ems="10"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/retype_password"
		app:layout_constraintTop_toBottomOf="@+id/create_password_editText" />

	<Button
		android:id="@+id/Submit_Registration_Button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="45dp"
		android:layout_marginRight="45dp"
		android:layout_marginBottom="4dp"
		android:text="@string/complete_button"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<Button
		android:id="@+id/Back_Button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="45dp"
		android:layout_marginLeft="45dp"
		android:layout_marginBottom="5dp"
		android:text="@string/back_button_registration"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>